# mp3_player_hardware

./: .gitignore  DAC.kicad_sch  POWER.kicad_sch  README.md  SOC.kicad_sch  fp-info-cache  mp3_test_board.csv  mp3_test_board.kicad_pcb  mp3_test_board.kicad_prl  mp3_test_board.kicad_pro  mp3_test_board.kicad_sch  mp3_test_board.xml  todo.md
hardware/: #auto_saved_files#  DAC.kicad_sch  New POwer.kicad_sch  NewDAC.kicad_sch  NewPower.kicad_sch  NewPower2.kicad_sch  POWER.kicad_sch  Power.kicad_sch  SOC.kicad_sch  SOC.kicad_sch-bak  WI-FI.kicad_sch  WI-FI.kicad_sch-bak  bom.ini  contour 2.dxf  contour 3.dxf  contour 4.dxf  contour.dxf  fp-info-cache  fp-lib-table  mp3_test_board-User_2.dxf  mp3_test_board-bom.xml  mp3_test_board.csv  mp3_test_board.kicad_pcb  mp3_test_board.kicad_prl  mp3_test_board.kicad_pro  mp3_test_board.kicad_sch  mp3_test_board.xml  output_job.py  sym-lib-table  ttt.dxf
jlcpcb/: project.db
my_buildroot_tree/: external.desc
new_hardware/: #auto_saved_files#  NewDAC.kicad_sch  Power.kicad_sch  SOC.kicad_sch  WI-FI.kicad_sch  WI-FI.kicad_sch-bak  _autosave-SOC.kicad_sch  _autosave-WI-FI.kicad_sch  calc.py  contour11111.dxf  fp-info-cache  mp3_test_board.kicad_pcb  mp3_test_board.kicad_prl  mp3_test_board.kicad_pro  mp3_test_board.kicad_sch  mp3_test_board.xml  mp3_test_board_bom_.html  mp3_test_board_bom_.html.tmp
simulation/: microcap.TNO  microcap.bak_cir  microcap.cir  microcap_cir.inx
software/software/src/: CMakeLists.txt  main.c  trash
software/software/src/player/: CMakeLists.txt  alsa.h  audiochank.c  audiochank.h  player.c  player.h
(+72 files in other folders)
